--- a/apps/jackett-vpn/docker-compose.yml
+++ b/apps/jackett-vpn/docker-compose.yml
@@ -11,14 +11,14 @@ services:
       - VPN_TYPE=${JACKETT_VPN_TYPE}
       - WIREGUARD_PRIVATE_KEY=${JACKETT_WIREGUARD_PRIVATE_KEY}
       - SERVER_COUNTRIES=${JACKETT_SERVER_COUNTRIES-Netherlands,United States,Japan}
-      - FREE_ONLY=${JACKETT_FREE_ONLY-on}
-      - FIREWALL=${JACKETT_FIREWALL-on}
+      - FREE_ONLY=${JACKETT_FREE_ONLY:+on}
+      - FIREWALL=${JACKETT_FIREWALL:+on}
       - FIREWALL_VPN_INPUT_PORTS=9117
       - FIREWALL_OUTBOUND_SUBNETS=
-      - DNS=${JACKETT_DNS-on}
+      - DNS=${JACKETT_DNS:+on}
       - DOT=on
-      - DOT_FILTERING_BLOCK_ADS=${JACKETT_BLOCK_ADS-on}
-      - DOT_FILTERING_BLOCK_SURVEILLANCE=${JACKETT_BLOCK_SURVEILLANCE-on}
+      - DOT_FILTERING_BLOCK_ADS=${JACKETT_BLOCK_ADS:+on}
+      - DOT_FILTERING_BLOCK_SURVEILLANCE=${JACKETT_BLOCK_SURVEILLANCE:+on}
     volumes:
       - ${APP_DATA_DIR}/data/gluetun:/gluetun
     networks:
