--- a/apps/jackett-vpn/docker-compose.yml
+++ b/apps/jackett-vpn/docker-compose.yml
@@ -10,15 +10,17 @@ services:
       - VPN_SERVICE_PROVIDER=${JACKETT_VPN_SERVICE_PROVIDER}
       - VPN_TYPE=${JACKETT_VPN_TYPE}
       - WIREGUARD_PRIVATE_KEY=${JACKETT_WIREGUARD_PRIVATE_KEY}
+      - OPENVPN_USERNAME=${JACKETT_OPENVPN_USERNAME}
+      - OPENVPN_PASSWORD=${JACKETT_OPENVPN_PASSWORD}
       - SERVER_COUNTRIES=${JACKETT_SERVER_COUNTRIES-Netherlands,United States,Japan}
-      - FREE_ONLY=${JACKETT_FREE_ONLY:+on}
-      - FIREWALL=${JACKETT_FIREWALL:+on}
+      - FREE_ONLY=${JACKETT_FREE_ONLY-false}
+      - FIREWALL=${JACKETT_FIREWALL-true}
       - FIREWALL_VPN_INPUT_PORTS=9117
       - FIREWALL_OUTBOUND_SUBNETS=
-      - DNS=${JACKETT_DNS:+on}
+      - DNS=${JACKETT_DNS-true}
       - DOT=on
-      - DOT_FILTERING_BLOCK_ADS=${JACKETT_BLOCK_ADS:+on}
-      - DOT_FILTERING_BLOCK_SURVEILLANCE=${JACKETT_BLOCK_SURVEILLANCE:+on}
+      - DOT_FILTERING_BLOCK_ADS=${JACKETT_BLOCK_ADS-false}
+      - DOT_FILTERING_BLOCK_SURVEILLANCE=${JACKETT_BLOCK_SURVEILLANCE-false}
     volumes:
       - ${APP_DATA_DIR}/data/gluetun:/gluetun
     networks:
