--- a/apps/jackett-vpn/docker-compose.yml
+++ b/apps/jackett-vpn/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - VPN_SERVICE_PROVIDER=${JACKETT_VPN_SERVICE_PROVIDER}
       - VPN_TYPE=${JACKETT_VPN_TYPE}
       - WIREGUARD_PRIVATE_KEY=${JACKETT_WIREGUARD_PRIVATE_KEY}
-      - OPENVPN_USERNAME=${JACKETT_OPENVPN_USERNAME}
+      - OPENVPN_USER=${JACKETT_OPENVPN_USERNAME}
       - OPENVPN_PASSWORD=${JACKETT_OPENVPN_PASSWORD}
       - SERVER_COUNTRIES=${JACKETT_SERVER_COUNTRIES-Netherlands,United States,Japan}
       - FREE_ONLY=${JACKETT_FREE_ONLY-false}
@@ -18,7 +18,7 @@ services:
       - FIREWALL_VPN_INPUT_PORTS=9117
       - FIREWALL_OUTBOUND_SUBNETS=
       - DNS=${JACKETT_DNS-true}
-      - DOT=on
+      - DOT=true
       - DOT_FILTERING_BLOCK_ADS=${JACKETT_BLOCK_ADS-false}
       - DOT_FILTERING_BLOCK_SURVEILLANCE=${JACKETT_BLOCK_SURVEILLANCE-false}
     volumes:
