--- a/apps/jackett-vpn/docker-compose.yml
+++ b/apps/jackett-vpn/docker-compose.yml
@@ -10,17 +10,13 @@ services:
       - VPN_SERVICE_PROVIDER=${JACKETT_VPN_SERVICE_PROVIDER}
       - VPN_TYPE=${JACKETT_VPN_TYPE}
       - WIREGUARD_PRIVATE_KEY=${JACKETT_WIREGUARD_PRIVATE_KEY}
-      - OPENVPN_USER=${JACKETT_OPENVPN_USERNAME}
-      - OPENVPN_PASSWORD=${JACKETT_OPENVPN_PASSWORD}
       - SERVER_COUNTRIES=${JACKETT_SERVER_COUNTRIES-Netherlands,United States,Japan}
-      - FREE_ONLY=${JACKETT_FREE_ONLY-false}
-      - FIREWALL=${JACKETT_FIREWALL-true}
+      - FREE_ONLY=${JACKETT_FREE_ONLY-on}
+      - FIREWALL=${JACKETT_FIREWALL-on}
       - FIREWALL_VPN_INPUT_PORTS=9117
       - FIREWALL_OUTBOUND_SUBNETS=
-      - DNS=${JACKETT_DNS-true}
-      - DOT=true
-      - DOT_FILTERING_BLOCK_ADS=${JACKETT_BLOCK_ADS-false}
-      - DOT_FILTERING_BLOCK_SURVEILLANCE=${JACKETT_BLOCK_SURVEILLANCE-false}
+      - DNS=${JACKETT_DNS-on}
+      - DOT=on
     volumes:
       - ${APP_DATA_DIR}/data/gluetun:/gluetun
     networks:
@@ -59,7 +55,7 @@ services:
       traefik.http.routers.jackett-local.service: jackett
       traefik.http.routers.jackett-local.tls: true
       runtipi.managed: true
- 
+
   jackett:
     image: linuxserver/jackett:latest
     container_name: jackett
