--- a/apps/jackett-vpn/config.json
+++ b/apps/jackett-vpn/config.json
@@ -74,64 +74,54 @@
     {
       "type": "boolean",
       "label": "VPN > Free Only",
-      "env_variable": "JACKETT_FREE_ONLY",
-      "default": false
+      "env_variable": "JACKETT_FREE_ONLY"
     },
     {
       "type": "boolean",
       "label": "VPN > Enable Port Forwarding",
-      "env_variable": "JACKETT_VPN_PORT_FORWARDING",
-      "default": false
+      "env_variable": "JACKETT_VPN_PORT_FORWARDING"
     },
     {
       "type": "number",
       "label": "VPN > WireGuard MTU",
       "placeholder": "1320",
-      "env_variable": "JACKETT_WIREGUARD_MTU",
-      "default": 1320
+      "env_variable": "JACKETT_WIREGUARD_MTU"
     },
     {
       "type": "boolean",
       "label": "Security > Enable Firewall",
-      "env_variable": "JACKETT_FIREWALL",
-      "default": true
+      "env_variable": "JACKETT_FIREWALL"
     },
     {
       "type": "boolean",
       "label": "Security > Enable DNS over TLS",
-      "env_variable": "JACKETT_DNS",
-      "default": true
-    },
-    {
-      "type": "boolean",
-      "label": "DNS-over-TLS > Enable IPv6",
-      "env_variable": "JACKETT_DOT_IPV6",
-      "default": false
+      "env_variable": "JACKETT_DNS"
     },
     {
       "type": "boolean",
       "label": "DNS Filtering > Block malicious",
-      "env_variable": "JACKETT_BLOCK_MALICIOUS",
-      "default": true
+      "env_variable": "JACKETT_BLOCK_MALICIOUS"
     },
     {
       "type": "boolean",
       "label": "DNS Filtering > Block ads",
-      "env_variable": "JACKETT_BLOCK_ADS",
-      "default": true
+      "env_variable": "JACKETT_BLOCK_ADS"
     },
     {
       "type": "boolean",
       "label": "DNS Filtering > Block surveillance",
-      "env_variable": "JACKETT_BLOCK_SURVEILLANCE",
-      "default": true
+      "env_variable": "JACKETT_BLOCK_SURVEILLANCE"
     },
     {
       "type": "text",
       "label": "DNS Filtering > Update period",
       "placeholder": "24h",
-      "env_variable": "JACKETT_DNS_UPDATE_PERIOD",
-      "default": "24h"
+      "env_variable": "JACKETT_DNS_UPDATE_PERIOD"
+    },
+    {
+      "type": "boolean",
+      "label": "DNS-over-TLS > Enable IPv6",
+      "env_variable": "JACKETT_DOT_IPV6"
     }
   ],
   "supported_architectures": ["arm64", "amd64"],
