--- a/apps/gitea/config.json
+++ b/apps/gitea/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "../app-info-schema.json",
-  "name": "Gitea",
+  "name": "Gitea+",
   "port": 8108,
   "available": true,
   "exposable": true,
