--- a/apps/vikunja/config.json
+++ b/apps/vikunja/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "../app-info-schema.json",
-  "name": "Vikunja",
+  "name": "Vikunja+",
   "available": true,
   "exposable": true,
   "dynamic_config": true,
