--- a/apps/Watchtower/config.json
+++ b/apps/Watchtower/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "../app-info-schema.json",
-  "name": "Watchtower+",
+  "name": "Watchtower",
   "available": true,
   "exposable": true,
   "dynamic_config": true,
