--- a/apps/Watchtower/config.json
+++ b/apps/Watchtower/config.json
@@ -1,45 +1,50 @@
 {
-  "$schema": "../app-info-schema.json",
-  "name": "Watchtower Auto-Updater",
+  "name": "Watchtower",
   "id": "watchtower",
-  "version": "latest",
   "available": true,
-  "exposable": true,
+  "exposable": false,
   "dynamic_config": true,
   "port": 8080,
-  "categories": ["utilities","infrastructure","devops"],
-  "description": "Automatically pulls and restarts Docker containers when new image versions are released.",
-  "short_desc": "Automated Docker image updater for all Runtipi apps.",
-  "author": "containrrr / Community",
+  "tipi_version": 1,
+  "version": "latest",
+  "categories": ["utilities", "automation"],
+  "description": "Watchtower automatically updates running Docker containers by monitoring for new image versions and restarting containers accordingly.",
+  "short_desc": "Automated Docker container updater.",
+  "author": "containrrr",
   "source": "https://github.com/containrrr/watchtower",
   "form_fields": [
     {
       "type": "text",
-      "label": "Schedule (cron)",
-      "env_variable": "WATCHTOWER_SCHEDULE",
-      "default": "0 2 * * *",
-      "placeholder": "0 2 * * *"
+      "label": "Update Interval (seconds)",
+      "placeholder": "300",
+      "env_variable": "WATCHTOWER_POLL_INTERVAL"
     },
     {
       "type": "boolean",
-      "label": "Enable Cleanup of Old Images",
+      "label": "Include Stopped Containers",
+      "env_variable": "WATCHTOWER_INCLUDE_STOPPED",
+      "default": false
+    },
+    {
+      "type": "boolean",
+      "label": "Cleanup Old Images",
       "env_variable": "WATCHTOWER_CLEANUP",
       "default": true
     },
     {
       "type": "boolean",
-      "label": "Enable Label Filtering",
-      "env_variable": "WATCHTOWER_LABEL_ENABLE",
-      "default": true
+      "label": "Enable Notifications",
+      "env_variable": "WATCHTOWER_NOTIFICATIONS",
+      "default": false
     },
     {
-      "type": "boolean",
-      "label": "Expose Web UI",
-      "env_variable": "WATCHTOWER_UI",
-      "default": false
+      "type": "text",
+      "label": "Notification Email",
+      "placeholder": "user@example.com",
+      "env_variable": "WATCHTOWER_NOTIFICATION_EMAIL"
     }
   ],
-  "supported_architectures": ["arm64","amd64"],
-  "created_at": 1710000000000,
-  "updated_at": 1710000000000
+  "supported_architectures": ["arm64", "amd64"],
+  "created_at": 1715865600000,
+  "updated_at": 1715865600000
 }
