--- a/apps/watchtower/config.json
+++ b/apps/watchtower/config.json
@@ -1,66 +1,37 @@
 {
   "$schema": "../app-info-schema.json",
   "name": "Watchtower+",
+  "id": "watchtower",
   "available": true,
   "exposable": true,
   "dynamic_config": true,
   "port": 8080,
-  "id": "watchtower",
   "tipi_version": 1,
   "version": "latest",
   "categories": ["utilities", "security"],
-  "description": "Automatic Docker container updater for Runtipi-managed services, with notifications and timezone support.",
-  "short_desc": "Watchtower auto-updates Docker containers with notifications.",
   "author": "containrrr + Runtipi community",
+  "description": "Auto-update Docker containers with cron, time-zone, notifications and optional UI.",
+  "short_desc": "Docker auto-updater with notifications.",
   "source": "https://github.com/containrrr/watchtower",
   "form_fields": [
     {
-      "type": "info",
-      "label": "⚙️ Label filtering",
-      "text": "If empty, all containers are monitored. Otherwise only containers with `LABEL=selector` are watched."
-    },
-    {
       "type": "text",
       "label": "Label selector",
-      "placeholder": "runtipi.managed=true",
+      "hint": "Only containers with this label=true will be watched; leave empty to watch all.",
       "env_variable": "WATCHTOWER_LABEL_ENABLE",
       "default": "runtipi.managed=true"
     },
     {
-      "type": "select",
-      "label": "Notification type",
-      "env_variable": "WATCHTOWER_NOTIFICATIONS",
-      "options": ["", "email", "slack", "msteams", "gotify"],
-      "default": ""
-    },
-    {
       "type": "text",
-      "label": "Notification URL / Slack/Teams/Gotify hook",
-      "placeholder": "https://hooks.slack.com/services/…",
-      "env_variable": "WATCHTOWER_NOTIFICATION_URL",
-      "depends_on": [
-        { "field": "WATCHTOWER_NOTIFICATIONS", "value": ["slack","msteams","gotify"] }
-      ]
-    },
-    {
-      "type": "text",
-      "label": "Email settings (from,to,server:port,user,pass)",
-      "placeholder": "from@you.com,to@you.com,smtp.server.com:587,user,pass",
-      "env_variable": "WATCHTOWER_NOTIFICATION_EMAIL",
-      "depends_on": [
-        { "field": "WATCHTOWER_NOTIFICATIONS", "value": ["email"] }
-      ]
-    },
-    {
-      "type": "text",
-      "label": "Cron schedule (6 fields including seconds)",
+      "label": "Cron schedule (6 fields)",
       "placeholder": "0 0 3 * * *",
       "env_variable": "WATCHTOWER_SCHEDULE",
       "default": "0 0 3 * * *"
     },
     {
       "type": "text",
-      "label": "Log & Schedule Time Zone (e.g. Europe/Rome)",
+      "label": "Time zone",
+      "placeholder": "Europe/Rome",
       "env_variable": "TZ",
       "default": "UTC"
     },
@@ -82,10 +53,23 @@
       "env_variable": "WATCHTOWER_UI",
       "default": false
     },
+
+    { "type": "text",     "label": "Notification type",       "hint": "email, slack, msteams, gotify or leave empty", "env_variable": "WATCHTOWER_NOTIFICATIONS", "default": "" },
+
+    { "type": "url",      "label": "Slack webhook URL",       "env_variable": "WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL",     "required": false },
+    { "type": "url",      "label": "MS Teams webhook URL",     "env_variable": "WATCHTOWER_NOTIFICATION_MSTEAMS_HOOK_URL",  "required": false },
+    { "type": "url",      "label": "Gotify URL",              "env_variable": "WATCHTOWER_NOTIFICATION_GOTIFY_URL",       "required": false },
+
+    { "type": "email",    "label": "Email from",              "env_variable": "WATCHTOWER_NOTIFICATION_EMAIL_FROM",       "required": false },
+    { "type": "email",    "label": "Email to",                "env_variable": "WATCHTOWER_NOTIFICATION_EMAIL_TO",         "required": false },
+    { "type": "fqdnip",   "label": "SMTP server (host:port)",  "env_variable": "WATCHTOWER_NOTIFICATION_EMAIL_SERVER",     "required": false },
+    { "type": "text",     "label": "SMTP username",           "env_variable": "WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER", "required": false },
+    { "type": "password", "label": "SMTP password",           "env_variable": "WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD", "required": false },
+
     {
-      "type": "textarea",
+      "type": "text",
       "label": "Extra Watchtower args",
-      "placeholder": "--include-stopped --rolling-restart",
+      "hint": "e.g. --include-stopped --rolling-restart",
       "env_variable": "WATCHTOWER_EXTRA_ARGS",
       "default": ""
     }
