--- a/apps/watchtower/docker-compose.yml
+++ b/apps/watchtower/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - WATCHTOWER_EXTRA_ARGS=${WATCHTOWER_EXTRA_ARGS}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-+     - /etc/localtime:/etc/localtime:ro
+      - /etc/localtime:/etc/localtime:ro
     restart: unless-stopped
     labels:
       runtipi.managed: "true"
