--- a/apps/watchtower/config.json
+++ b/apps/watchtower/config.json
@@ -31,9 +31,9 @@
     {
       "type": "text",
       "label": "Time zone",
-      "placeholder": "Europe/Rome",
+      "placeholder": "Europe/Prague",
       "env_variable": "TZ",
-      "default": "Europe/Rome"
+      "default": "Europe/Prague"
     },
     {
       "type": "boolean",
