--- a/apps/watchtower/config.json
+++ b/apps/watchtower/config.json
@@ -16,6 +16,13 @@
   "form_fields": [
     {
       "type": "text",
+      "label": "Time Zone",
+      "hint": "Your IANA time zone, e.g. Europe/Prague",
+      "env_variable": "TZ",
+      "default": "Europe/Prague"
+    },
+    {
+      "type": "text",
       "label": "Label selector",
       "hint": "Only containers with this label=true will be watched; leave empty to watch all.",
       "env_variable": "WATCHTOWER_LABEL_ENABLE",
@@ -46,19 +53,61 @@
       "env_variable": "WATCHTOWER_UI",
       "default": false
     },
-
-    { "type": "text",     "label": "Notification type",       "hint": "email, slack, msteams, gotify or leave empty", "env_variable": "WATCHTOWER_NOTIFICATIONS", "default": "" },
-
-    { "type": "url",      "label": "Slack webhook URL",       "env_variable": "WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL",     "required": false },
-    { "type": "url",      "label": "MS Teams webhook URL",     "env_variable": "WATCHTOWER_NOTIFICATION_MSTEAMS_HOOK_URL",  "required": false },
-    { "type": "url",      "label": "Gotify URL",              "env_variable": "WATCHTOWER_NOTIFICATION_GOTIFY_URL",       "required": false },
-
-    { "type": "email",    "label": "Email from",              "env_variable": "WATCHTOWER_NOTIFICATION_EMAIL_FROM",       "required": false },
-    { "type": "email",    "label": "Email to",                "env_variable": "WATCHTOWER_NOTIFICATION_EMAIL_TO",         "required": false },
-    { "type": "fqdnip",   "label": "SMTP server (host:port)",  "env_variable": "WATCHTOWER_NOTIFICATION_EMAIL_SERVER",     "required": false },
-    { "type": "text",     "label": "SMTP username",           "env_variable": "WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER", "required": false },
-    { "type": "password", "label": "SMTP password",           "env_variable": "WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD", "required": false },
-
+    {
+      "type": "text",
+      "label": "Notification type",
+      "hint": "email, slack, msteams, gotify or leave empty",
+      "env_variable": "WATCHTOWER_NOTIFICATIONS",
+      "default": ""
+    },
+    {
+      "type": "url",
+      "label": "Slack webhook URL",
+      "env_variable": "WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL",
+      "required": false
+    },
+    {
+      "type": "url",
+      "label": "MS Teams webhook URL",
+      "env_variable": "WATCHTOWER_NOTIFICATION_MSTEAMS_HOOK_URL",
+      "required": false
+    },
+    {
+      "type": "url",
+      "label": "Gotify URL",
+      "env_variable": "WATCHTOWER_NOTIFICATION_GOTIFY_URL",
+      "required": false
+    },
+    {
+      "type": "email",
+      "label": "Email from",
+      "env_variable": "WATCHTOWER_NOTIFICATION_EMAIL_FROM",
+      "required": false
+    },
+    {
+      "type": "email",
+      "label": "Email to",
+      "env_variable": "WATCHTOWER_NOTIFICATION_EMAIL_TO",
+      "required": false
+    },
+    {
+      "type": "fqdnip",
+      "label": "SMTP server (host:port)",
+      "env_variable": "WATCHTOWER_NOTIFICATION_EMAIL_SERVER",
+      "required": false
+    },
+    {
+      "type": "text",
+      "label": "SMTP username",
+      "env_variable": "WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER",
+      "required": false
+    },
+    {
+      "type": "password",
+      "label": "SMTP password",
+      "env_variable": "WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD",
+      "required": false
+    },
     {
       "type": "text",
       "label": "Extra Watchtower args",
